done with first page

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     <title>FitLife</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="Style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1>Welcome to FitLife</h1>
+    <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -16,13 +18,29 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h3>Your Fitness Journey Starts Here</h3>
+    <main>
+
+        <h3>Your Fitness Journey Starts Here</h3>
+        <img src="images/Banner.png" alt="banner">
     <p>Welcome to <b>FitLife</b>, your ultimate destination for all things fitness. Whether you're looking to lose weight, build muscle, or improve your overall health, we have the resources and support you need to succeed.</p>
-    <img src="images/Workingout.jpg" alt="People working out">
-    <img src="images\Nutrtion.webp" alt="Healthy food" >
     </main>
+    <a href="Workouts.html"><img class="images" src="images/Workingout.jpg" alt="People working out"></a>
+    <a href="Nutrition.html"><img class="images" src="images/Nutrition.webp" alt="Healthy food"></a>
+    <a href="Community.html"><img class="images" src="images/Community.webp" alt="Community support"></a>
+
+    <div id="div1">
+        
+    </div>
+   <footer>
+    <p>&copy; 2025 FitLife. All rights reserved.</p>
+    <div class="social-media">
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+    </div>
+</footer>
 </body>
 </html>
