--- a/Services.html
+++ b/Services.html
@@ -20,8 +20,19 @@
             <li><a href="Progress.html">Progress</a></li>
         </ul>
     </nav>
-    <main><h3>Your Fitness Journey Starts Here</h3>
-    
+    <main><h3>Our Services</h3>
+        <ul>
+            <li>🏋️ Personalized workout programs.</li>
+            <li>🥗 Nutrition & meal planning.</li>
+            <li>🤝 Community – forums, events, success stories.</li>
+            <li>📖 Articles – fitness knowledge base.</li>
+
+        </ul>
+        
     </main>
+    <img id="Coaching" src="images/coaching.webp" alt="Coaching">
+    <div id="div2">
+            <p>All services are designed to help you reach your fitness goals.</p>
+        </div>
 </body>
 </html>
