--- a/Contact.html
+++ b/Contact.html
@@ -20,8 +20,16 @@
             <li><a href="Progress.html">Progress</a></li>
         </ul>
     </nav>
-    <main><h3>Your Fitness Journey Starts Here</h3>
-    
+    <main><h3>Contact Us</h3>
+        <p>If you have any questions, feedback, or need assistance, feel free to reach out to us:</p>
+        <div id="contact-info"><ul id="contact-info-list">
+            <li><a href="mailto:contact@fitlife.com">contact@fitlife.com</a></li>
+            <li>Phone: (123) 456-7890</li>
+            <li>Address: Jeddah,Saudi Arabia</li>
+        </ul></div>
+        
     </main>
+            <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</
+
 </body>
 </html>
