--- a/Contact.html
+++ b/Contact.html
@@ -17,19 +17,21 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h3>Contact Us</h3>
+    <main><h1>Contact Us</h1>
         <p>If you have any questions, feedback, or need assistance, feel free to reach out to us:</p>
         <div id="contact-info"><ul id="contact-info-list">
             <li><a href="mailto:contact@fitlife.com">contact@fitlife.com</a></li>
-            <li>Phone: (123) 456-7890</li>
+            <li>Phone: +96651239125</li>
             <li>Address: Jeddah,Saudi Arabia</li>
         </ul></div>
         
     </main>
-            <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</
-
+            <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</p>
+    <footer>
+        <p>&copy; 2025 FitLife</p>
+    </footer>
 </body>
 </html>
