--- a/Services.html
+++ b/Services.html
@@ -17,10 +17,10 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h3>Our Services</h3>
+    <main><h1>Our Services</h1>
         <ul>
             <li>🏋️ Personalized workout programs.</li>
             <li>🥗 Nutrition & meal planning.</li>
@@ -34,5 +34,8 @@
     <div id="div2">
             <p>All services are designed to help you reach your fitness goals.</p>
         </div>
+    <footer>
+        <p>&copy; 2025 FitLife</p>
+    </footer>
 </body>
 </html>
