--- a/Community.html
+++ b/Community.html
@@ -17,7 +17,7 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
     <main><h3>Your Fitness Journey Starts Here</h3>
