--- a/Nutrition.html
+++ b/Nutrition.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="Style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,11 +18,42 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h3>Your Fitness Journey Starts Here</h3>
     
-    </main>
+    <header>
+        <h1>Nutrition Plans</h1>
+    </header>
+    <main>
+        <div class="nutrition-container">
+            <div class="workout-card">
+                <img src="../images/salad.jpg" alt="Healthy Salad">
+                <h2>Balanced Meals</h2>
+                <p>Expert-crafted meal plans that ensure proper nutrition for all fitness goals.</p>
+                <a href="https://www.eatingwell.com/category/4286/meal-plans/"><button>Meal plans</button></a>
+            </div>
+            <div class="workout-card">
+                <img src="../images/smoothie.jpg" alt="Smoothie">
+                <h2>Energy Boost</h2>
+                <p>Simple recipes like smoothies and shakes to keep you fueled throughout the day.</p>
+                <a href="https://brethrencarevillage.org/10-smoothies-to-jumpstart-your-healthy-day/?gad_source=1&gad_campaignid=22181797612&gbraid=0AAAAAo5q3TVdhswbdN8pOS_nhjg1yPavi&gclid=Cj0KCQjw0NPGBhCDARIsAGAzpp0eppp3uvYT5-IMovCRddF0FC3Jsq7Ni9H8NXfeukgsMx7pQ2Yp7GkaAkpWEALw_wcB"><button>Smoothie</button></a>
+            </div>
+            <div class="workout-card">
+                <img src="images/mealprep.jpg" alt="Meal Prep">
+                <h2>Meal Prep</h2>
+                <p>Easy meal prep ideas that save time and help you stay consistent with your diet.</p>
+                <a href="https://www.loveandlemons.com/healthy-meal-prep-ideas/"><button>Meal Preparation</button></a>
+            </div>
+        </div>
+
+        <blockquote>
+            “Take care of your body. It’s the only place you have to live.”
+        </blockquote>
+        <cite>— Jim Rohn</cite>
+    <footer>
+        <p>&copy; 2025 FitLife</p>
+    </footer>
+
 </body>
 </html>
