--- a/Workouts.html
+++ b/Workouts.html
@@ -17,11 +17,34 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
             <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Progress.html">Progress</a></li>
+            <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h3>Your Fitness Journey Starts Here</h3>
-    
+     <header>
+        <h1>Workout Library</h1>
+    </header>
+    <main>
+        <div class="workout-card">
+            <img src="images/Strength.webp" alt="Strength Training" width="200" height="200">
+            <h2>Strength</h2>
+            <p>Build muscle with progressive strength plans.</p>
+            <button>Start Program</button>
+        </div>
+        <div class="workout-card">
+            <img src="images/cardio.webp" alt="Cardio Training" width="200">
+            <h2>Cardio</h2>
+            <p>Boost stamina and burn calories effectively.</p>
+            <button>Start Program</button>
+        </div>
+        <div class="workout-card">
+            <img src="images/Flexibility.png" alt="Flexibility Training" width="200">
+            <h2>Flexibility</h2>
+            <p>Improve mobility and reduce stress with good routines.</p>
+            <button>Start Program</button>
+        </div>
     </main>
+    <footer>
+        <p>&copy; 2025 FitLife</p>
+    </footer>
 </body>
 </html>
