--- a/Workouts.html
+++ b/Workouts.html
@@ -28,19 +28,19 @@
             <img src="images/Strength.webp" alt="Strength Training" width="200" height="200">
             <h2>Strength</h2>
             <p>Build muscle with progressive strength plans.</p>
-            <button>Start Program</button>
+            <a href="https://www.muscleandstrength.com/workout-routines"><button>Start Program</button></a>
         </div>
         <div class="workout-card">
             <img src="images/cardio.webp" alt="Cardio Training" width="200">
             <h2>Cardio</h2>
             <p>Boost stamina and burn calories effectively.</p>
-            <button>Start Program</button>
+            <a href="https://www.muscleandstrength.com/workouts/cardio"><button>Start Program</button></a>
         </div>
         <div class="workout-card">
             <img src="images/Flexibility.png" alt="Flexibility Training" width="200">
             <h2>Flexibility</h2>
             <p>Improve mobility and reduce stress with good routines.</p>
-            <button>Start Program</button>
+            <a href="https://www.bodyweightwarrior.co.uk/blog/get-started-with-flexibility/"><button>Start Program</button></a>
         </div>
     </main>
     <footer>
