--- a/Contact.html
+++ b/Contact.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <title>FitLife</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="Styles/Contact.css">
+        <link rel="stylesheet" type="text/css" href="Styles/global.css">
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
-
-    <nav class="navbar">
+    <header>
+        <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+        <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Services.html">Services</a></li>
@@ -20,16 +22,20 @@
             <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h1>Contact Us</h1>
+    </header>
+    <main id="contact">
+        <h1>Contact Us</h1>
         <p>If you have any questions, feedback, or need assistance, feel free to reach out to us:</p>
-        <div id="contact-info"><ul id="contact-info-list">
-            <li><a href="mailto:contact@fitlife.com">contact@fitlife.com</a></li>
-            <li>Phone: +96651239125</li>
-            <li>Address: Jeddah,Saudi Arabia</li>
-        </ul></div>
-        
+        <div id="contact-info">
+            <ul id="contact-info-list">
+                <li><a href="mailto:contact@fitlife.com">contact@fitlife.com</a></li>
+                <li>Phone: +96651239125</li>
+                <li>Address: Jeddah,Saudi Arabia</li>
+            </ul>
+        </div>
+        <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</p>
     </main>
-            <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</p>
+            
     <footer>
         <p>&copy; 2025 FitLife</p>
     </footer>
