--- a/Nutrition.html
+++ b/Nutrition.html
@@ -2,18 +2,20 @@
 <html>
 <head>
     <title>FitLife</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="Styles/Nutrition.css">
+        <link rel="stylesheet" type="text/css" href="Styles/global.css">
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
-
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
+    <header>
+        <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
             <li><a href="Services.html">Services</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
@@ -21,11 +23,11 @@
             <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    
-    <header>
-        <h1>Nutrition Plans</h1>
-    </header>
+</header>
+
+
     <main>
+        <h1>Nutrition Plans</h1>
         <div class="nutrition-container">
             <div class="workout-card">
                 <img src="../images/salad.jpg" alt="Healthy Salad">
@@ -51,6 +53,8 @@
             “Take care of your body. It’s the only place you have to live.”
         </blockquote>
         <cite>— Jim Rohn</cite>
+        
+    </main>
     <footer>
         <p>&copy; 2025 FitLife</p>
     </footer>
