--- a/Services.html
+++ b/Services.html
@@ -2,17 +2,19 @@
 <html>
 <head>
     <title>FitLife</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link rel="stylesheet" type="text/css" href="Styles/Services.css">
+        <link rel="stylesheet" type="text/css" href="Styles/global.css">
+
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
-
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
+   <header>
+        <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
             <li><a href="Services.html">Services</a></li>
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Workouts.html">Workouts</a></li>
@@ -20,14 +22,16 @@
             <li><a href="Community.html">Community</a></li>
         </ul>
     </nav>
-    <main><h1>Our Services</h1>
-        <ul>
-            <li>🏋️ Personalized workout programs.</li>
-            <li>🥗 Nutrition & meal planning.</li>
-            <li>🤝 Community – forums, events, success stories.</li>
-            <li>📖 Articles – fitness knowledge base.</li>
+</header>
+    <main>
+        <h1>Our Services</h1>
+            <ul>
+                <li>🏋️ Personalized workout programs.</li>
+                <li>🥗 Nutrition & meal planning.</li>
+                <li>🤝 Community – forums, events, success stories.</li>
+                <li>📖 Articles – fitness knowledge base.</li>
 
-        </ul>
+            </ul>
         
     </main>
     <img id="Coaching" src="images/coaching.webp" alt="Coaching">
