--- a/Community.html
+++ b/Community.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title>FitLife</title>
+    <link rel="stylesheet" type="text/css" href="Styles/global.css">
     <link rel="stylesheet" type="text/css" href="Styles/Community.css">
-        <link rel="stylesheet" type="text/css" href="Styles/global.css">
+        
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,8 +24,16 @@
         </ul>
     </nav>
 </header>
-    <main><h3>Your Fitness Journey Starts Here</h3>
-    
+    <main>
+        <h2>Join Our Community</h2>
+        <p>Connect with like-minded individuals, share your fitness journey, and access exclusive resources.</p>
+        <h3>Discussion Forums</h3>
+        <img src="images/Discussion-forums.avif" alt="Discussion Forums">
+        <p>Engage in conversations, ask questions, and share your insights with others.</p>
+        <button>Join the Discussion</button>
     </main>
+     <footer>
+        <p>&copy; 2025 FitLife</p>
+    </footer>
 </body>
 </html>
