--- a/Workouts.html
+++ b/Workouts.html
@@ -27,13 +27,14 @@
   
     <main>
         <h2>Workout Library</h2>
-        <div class="workout-card">
-            <img src="images/Strength.webp" alt="Strength Training" width="200" height="200">
-            <h3>Strength</h3>
-            <p>Build muscle with progressive strength plans.</p>
-            <a href="https://www.muscleandstrength.com/workout-routines"><button>Start Program</button></a>
-        </div>
-        <div class="workout-card">
+        <div class="workout-container">
+            <div class="workout-card">
+                <img src="images/Strength.webp" alt="Strength Training" width="200" height="200">
+                <h3>Strength</h3>
+                <p>Build muscle with progressive strength plans.</p>
+                <a href="https://www.muscleandstrength.com/workout-routines"><button>Start Program</button></a>
+            </div>
+             <div class="workout-card">
             <img src="images/cardio.webp" alt="Cardio Training" width="200">
             <h3>Cardio</h3>
             <p>Boost stamina and burn calories effectively.</p>
@@ -45,6 +46,8 @@
             <p>Improve mobility and reduce stress with good routines.</p>
             <a href="https://www.bodyweightwarrior.co.uk/blog/get-started-with-flexibility/"><button>Start Program</button></a>
         </div>
+        </div>
+       
     </main>
     <footer>
         <p>&copy; 2025 FitLife</p>
