--- a/Services.html
+++ b/Services.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
+    Mohannad Alqarni 2237505 CS1 10/1/2025
    <header>
         <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
         <nav>
