--- a/Community.html
+++ b/Community.html
@@ -1,39 +1,49 @@
+<!-- Defines the HTML document type and sets up the webpage structure -->
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Page title and external CSS/Fonts linking -->
     <title>FitLife</title>
     <link rel="stylesheet" type="text/css" href="Styles/global.css">
     <link rel="stylesheet" type="text/css" href="Styles/Community.css">
         
-
+    <!-- Google Fonts integration -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
+
 <body>
     Mohannad Alqarni 2237505 CS1 10/1/2025
+
+    <!-- Website header containing logo and navigation menu -->
     <header>
         <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
         <nav>
             <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Workouts.html">Workouts</a></li>
-            <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Community.html">Community</a></li>
-        </ul>
-    </nav>
-</header>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Services.html">Services</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Workouts.html">Workouts</a></li>
+                <li><a href="Nutrition.html">Nutrition</a></li>
+                <li><a href="Community.html">Community</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main content section for Community page -->
     <main>
         <h2>Join Our Community</h2>
         <p>Connect with like-minded individuals, share your fitness journey, and access exclusive resources.</p>
+        
         <h3>Discussion Forums</h3>
         <img src="images/Discussion-forums.avif" alt="Discussion Forums">
         <p>Engage in conversations, ask questions, and share your insights with others.</p>
         <button>Join the Discussion</button>
     </main>
-     <footer>
+
+    <!-- Footer section with copyright -->
+    <footer>
         <p>&copy; 2025 FitLife</p>
     </footer>
 </body>
