--- a/Contact.html
+++ b/Contact.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Page title and external CSS/Fonts linking -->
     <title>FitLife</title>
+    <!-- Global styles for consistent look across pages -->
     <link rel="stylesheet" type="text/css" href="Styles/global.css">
+    <!-- Contact page specific styles -->
     <link rel="stylesheet" type="text/css" href="Styles/Contact.css">
         
-
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
+    <!-- Google Fonts integration for custom typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     Mohannad Alqarni 2237505 CS1 10/1/2025
+
+    <!-- Website header containing logo and navigation menu -->
     <header>
-        <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+        <!-- Logo and site title -->
+        <h1>
+            <img id="logo" src="images/Logo.png" alt="FitLife Logo">
+            Welcome to <span id="fit">Fit</span>Life
+        </h1>
+        <!-- Navigation bar for site pages -->
         <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Workouts.html">Workouts</a></li>
-            <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Community.html">Community</a></li>
-        </ul>
-    </nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Services.html">Services</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Workouts.html">Workouts</a></li>
+                <li><a href="Nutrition.html">Nutrition</a></li>
+                <li><a href="Community.html">Community</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <!-- Main content section for Contact page -->
     <main id="contact">
+        <!-- Contact heading -->
         <h2>Contact Us</h2>
+        <!-- Brief description for contacting -->
         <p>If you have any questions, feedback, or need assistance, feel free to reach out to us:</p>
+        <!-- Contact information list -->
         <div id="contact-info">
             <ul id="contact-info-list">
                 <li><a href="mailto:contact@fitlife.com">contact@fitlife.com</a></li>
@@ -35,9 +50,11 @@
                 <li>Address: Jeddah,Saudi Arabia</li>
             </ul>
         </div>
+        <!-- Encouragement message -->
         <p id="p1">We look forward to hearing from you and helping you on your fitness journey!</p>
     </main>
             
+    <!-- Footer section with copyright -->
     <footer>
         <p>&copy; 2025 FitLife</p>
     </footer>
