--- a/Nutrition.html
+++ b/Nutrition.html
@@ -1,62 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Page title -->
     <title>FitLife</title>
+    <!-- Global styles for consistent look across pages -->
     <link rel="stylesheet" type="text/css" href="Styles/global.css">
+    <!-- Nutrition page specific styles -->
     <link rel="stylesheet" type="text/css" href="Styles/Nutrition.css">
         
-
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
+    <!-- Google Fonts integration for custom typography -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Font Awesome for social media icons (if needed) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Custom fonts for headings and text -->
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double+Ink:wght@100..900&family=Fugaz+One&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     Mohannad Alqarni 2237505 CS1 10/1/2025
+
+    <!-- Website header containing logo and navigation menu -->
     <header>
-        <h1><img id="logo" src="images/Logo.png" alt="FitLife Logo">Welcome to <span id="fit">Fit</span>Life</h1>
+        <!-- Logo and site title -->
+        <h1>
+            <img id="logo" src="images/Logo.png" alt="FitLife Logo">
+            Welcome to <span id="fit">Fit</span>Life
+        </h1>
+        <!-- Navigation bar for site pages -->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Workouts.html">Workouts</a></li>
-            <li><a href="Nutrition.html">Nutrition</a></li>
-            <li><a href="Community.html">Community</a></li>
-        </ul>
-    </nav>
-</header>
+                <li><a href="Services.html">Services</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Workouts.html">Workouts</a></li>
+                <li><a href="Nutrition.html">Nutrition</a></li>
+                <li><a href="Community.html">Community</a></li>
+            </ul>
+        </nav>
+    </header>
 
-
+    <!-- Main content section for Nutrition page -->
     <main>
+        <!-- Nutrition plans heading -->
         <h2>Nutrition Plans</h2>
+        <!-- Container for nutrition cards -->
         <div class="nutrition-container">
+            <!-- Card for balanced meals -->
             <div class="workout-card">
                 <img src="../images/salad.jpg" alt="Healthy Salad">
                 <h3>Balanced Meals</h3>
                 <p>Expert-crafted meal plans that ensure proper nutrition for all fitness goals.</p>
+                <!-- Link to external meal plans resource -->
                 <a href="https://www.eatingwell.com/category/4286/meal-plans/"><button>Meal plans</button></a>
             </div>
+            <!-- Card for energy boost recipes -->
             <div class="workout-card">
                 <img src="../images/smoothie.jpg" alt="Smoothie">
                 <h3>Energy Boost</h3>
                 <p>Simple recipes like smoothies and shakes to keep you fueled throughout the day.</p>
+                <!-- Link to external smoothie recipes resource -->
                 <a href="https://brethrencarevillage.org/10-smoothies-to-jumpstart-your-healthy-day/?gad_source=1&gad_campaignid=22181797612&gbraid=0AAAAAo5q3TVdhswbdN8pOS_nhjg1yPavi&gclid=Cj0KCQjw0NPGBhCDARIsAGAzpp0eppp3uvYT5-IMovCRddF0FC3Jsq7Ni9H8NXfeukgsMx7pQ2Yp7GkaAkpWEALw_wcB"><button>Smoothie</button></a>
             </div>
+            <!-- Card for meal prep ideas -->
             <div class="workout-card">
                 <img src="images/mealprep.jpg" alt="Meal Prep">
                 <h3>Meal Prep</h3>
                 <p>Easy meal prep ideas that save time and help you stay consistent with your diet.</p>
+                <!-- Link to external meal prep resource -->
                 <a href="https://www.loveandlemons.com/healthy-meal-prep-ideas/"><button>Meal Preparation</button></a>
             </div>
         </div>
 
+        <!-- Motivational quote section -->
         <blockquote>
             “Take care of your body. It’s the only place you have to live.”
         </blockquote>
         <cite>— Jim Rohn</cite>
         
     </main>
+    <!-- Footer section with copyright -->
     <footer>
         <p>&copy; 2025 FitLife</p>
     </footer>
